# ffn

./: README.md  pyproject.toml
ffn/: __init__.py  activations.py  layers.py  networks.py  scalers.py  settings.py  utils.py
scripts/: test.sh
test/: test_activations.py  test_layers.py  test_networks.py  test_scalers.py  test_utils.py
